chore: fix y-overflow on slider

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -77,6 +77,7 @@ slider-component.slider-component-full-width {
     position: relative;
     flex-wrap: inherit;
     overflow-x: auto;
+    overflow-y: hidden;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     scroll-padding-left: 1rem;
@@ -93,6 +94,7 @@ slider-component.slider-component-full-width {
     position: relative;
     flex-wrap: inherit;
     overflow-x: auto;
+    overflow-y: hidden;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     scroll-padding-left: 1.5rem;
